# pl

./: .gitignore  README.md  browser.json  browser_auth_instructions.md  check_token.py  complete_oauth.py  create_youtube_playlist.py  curl.txt  debug_playlist.py  direct_test.py  extract_browser_auth.py  extract_browser_auth_manual.py  extract_from_browser_cookies.py  extract_from_curl.py  fix_oauth.py  fresh_auth.py  pyproject.toml  refresh_token.py  run-ytmusic-mcp.sh  setup_browser_auth.py  setup_youtube_music.py  test_auth.py  test_browser.json  test_browser_auth.py  test_curl.txt  test_curl_parse.py  test_search.py  test_setup.py  test_simple.py  test_with_headers.py  test_ytmusic_format.py  test_ytmusic_internals.py  verify_auth.py
src/ytmusic_mcp/: auth.py  browser_auth.py  playlist.py  server.py  youtube_api.py
tests/: test_auth.py  test_integration.py  test_mcp_tools.py  test_playlist.py  test_youtube_api.py
tools/: extract_browser_auth.py  extract_browser_auth_manual.py  setup_browser_auth.py  verify_auth.py
