[project]
name = "ytmusic-mcp"
version = "0.1.0"
description = "MCP server for YouTube Music"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.56.0",
    "requests>=2.32.5",
    "ytmusicapi>=1.0.0",
]

[project.scripts]
ytmusic-mcp = "ytmusic_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
